--- a/JumpcutW/JumpcutW.vcxproj
+++ b/JumpcutW/JumpcutW.vcxproj
@@ -14,7 +14,7 @@
     <ProjectGuid>{CCE3447F-FBF5-4175-B6B1-0F5520D095D9}</ProjectGuid>
     <RootNamespace>SysTrayDemo</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <ProjectName>JumpcutForWindows</ProjectName>
+    <ProjectName>JumpcutW</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -103,9 +103,6 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Jumpcut.rc" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
