Adding start of history search combobox

--- a/JumpcutW/JumpcutW.vcxproj
+++ b/JumpcutW/JumpcutW.vcxproj
@@ -143,6 +143,7 @@
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <AdditionalDependencies>comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
