--- a/JumpcutW/Jumpcut.rc
+++ b/JumpcutW/Jumpcut.rc
@@ -76,12 +76,12 @@ BEGIN
     LTEXT           "JumpcutW is licensed uner the MIT License by Charles Sanders.",IDC_STATIC,9,108,137,18,SS_NOPREFIX
 END
 
-IDD_RSEARCH DIALOGEX 22, 17, 183, 18
+IDD_RSEARCH DIALOGEX 22, 17, 228, 18
 STYLE DS_SETFONT | DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "Clipboard History Search"
-FONT 12, "Verdana", 400, 0, 0x0
+FONT 12, "DejaVu Sans Condensed", 400, 0, 0x0
 BEGIN
-    COMBOBOX        IDC_SEARCH_RESULTS,1,4,181,227,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_SEARCH_RESULTS,3,4,222,227,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
 END
 
 
@@ -99,6 +99,7 @@ BEGIN
 
     IDD_RSEARCH, DIALOG
     BEGIN
+        RIGHTMARGIN, 183
     END
 END
 #endif    // APSTUDIO_INVOKED
